# delegated-underwriting-sim

./: .gitignore  README.md  pyproject.toml
delegated_underwriting_lifetime/: __init__.py  aggregate.py  experiments.py
delegated_underwriting_sim/: __init__.py  aggregate.py  bounds.py  experiments.py
delegated_underwriting_simulations/: __init__.py  aggregate.py  bounds.py  experiments.py
results/: lifetime_scaling.csv
tests/: test_accounting.py  test_bounds.py  test_scaling.py
