[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "delegated-underwriting-sim"
version = "0.1.0"
description = "Minimal aggregate-credit validation for delegated underwriting."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[project.scripts]
delegated-underwriting-sim = "delegated_underwriting_sim.experiments:main"

[tool.hatch.build.targets.wheel]
packages = ["delegated_underwriting_sim"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
