[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "delegated-underwriting-lifetime"
version = "0.1.0"
description = "Minimal aggregate-credit validation for delegated underwriting."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[project.scripts]
delegated-underwriting-lifetime = "delegated_underwriting_lifetime.experiments:main"

[tool.hatch.build.targets.wheel]
packages = ["delegated_underwriting_lifetime"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
